@@ -2,6 +2,7 @@
 v4.0-git
 --------
 
+[jan] Add recurring tasks (Request #2150).
 
 
 ----------
